[package]
name = "cotton"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "shaders/classical_raytracer_shader",
]

[dependencies]
ash = "0.37.0"
ash-window = "0.10.0"
env_logger = "0.9.0"
log = "0.4.14"
tobj = "3.2.0"
winit = "0.26.1"
anyhow = "1.0.57"
glam = { version = "0.21", default-features = false, features = ["libm"] }
classical_raytracer_shader = { path = "./shaders/classical_raytracer_shader" }

[build-dependencies]
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu" }
anyhow = "1.0.57"